gccida/c0/build_complex_type
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_complex_type/src/tree.c:4550:24: error: use of undeclared identifier 'unk_89ED39'
name = ( const char *)&unk_89ED39; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_complex_type/src/tree.c:4554:24: error: use of undeclared identifier 'unk_89ED4D'
name = ( const char *)&unk_89ED4D; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_complex_type/src/tree.c:4558:24: error: use of undeclared identifier 'unk_89ED63'
name = ( const char *)&unk_89ED63; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_complex_type/src/tree.c:4562:24: error: use of undeclared identifier 'unk_89ED75'
name = ( const char *)&unk_89ED75; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_complex_type/src/tree.c:4586:24: error: use of undeclared identifier 'unk_89EDE6'
name = ( const char *)&unk_89EDE6; 
                       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/build_complex_type/src/obj/tree.o] Error 1
